# libkof

./: CMakeLists.txt  README.md
core/: CMakeLists.txt  kof_items.c
core/tests/: CMakeLists.txt  test_kof_items.c
include/: CMakeLists.txt  compiler-status.h  het-array.h  kof-io.h  kof-mem.h  kof-str.h  kof_items.h  kofmem.h  test-tools.h
utils/: CMakeLists.txt  kof-io.c  kofmem.c
utils/tests/: CMakeLists.txt  test_kofio.c  test_kofmem.c
